--- a/app/views/devise/registrations/_pro_form.html.erb
+++ b/app/views/devise/registrations/_pro_form.html.erb
@@ -36,7 +36,7 @@
 
 
     <div class="actions form-group">
-      <%= f.submit "Sign up", class: "btn btn-success" id: 'form-submit-btn' %>
+      <%= f.submit "Sign up", class: "btn btn-success", id: 'form-submit-btn' %>
     </div>
   
 <% end %>
